--- a/ClientApp/src/app/formula-lookup/add-marketing-indicator/add-marketing-indicator.component.html
+++ b/ClientApp/src/app/formula-lookup/add-marketing-indicator/add-marketing-indicator.component.html
@@ -16,6 +16,7 @@
               <label style="margin-left:4%">Market Indicator</label>
               <input style="width: 50%;margin-left:25px" type="text" class="form-control" [(ngModel)]="marketingindicator" #marketingindica name="marketingindicato" value="">
             </div>
+            <input hidden style="width: 50%;margin-left:25px" type="text" class="form-control" [(ngModel)]="marketingid" #marketingID name="marketingiD" value="">
           </div>
         </div>
       </fieldset>
@@ -24,7 +25,7 @@
       <p class="font-weight-bold" style="margin-top:1%;margin-left:1%">Click To Edit the value in Grid</p>
     </div>
     <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;">
-      <table class="table-hover table-bordered" style="height:auto;width:100%;background-color:white">
+      <table class=" table table-hover table-bordered" style="height:auto;width:100%;background-color:white">
         <thead>
           <tr>
             <th scope="col">Market Indicator</th>
@@ -32,18 +33,23 @@
         </thead>
         <tbody>
           <tr *ngFor="let datas of market_indi_data; let i=index; " (click)="setvalues(datas);">
-            <td class ="tabledatasize">{{ datas.MarketingIndicator}}</td>
+            <td hidden> {{ datas.MarketingId}}</td>
+            <td>{{ datas.MarketingIndicator}}</td>
           </tr>
         </tbody>
       </table>
     </div>
 
+
+
   </div>
+
+
 
 </div>
 <div style="margin-top:0.5%">
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;" matDialogClose>Close</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px">Save / Update</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px">New</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px">Delete</button>
+  <button type="submit" class="btn btn-primary buttoncolor" style="float:right;" matDialogClose>Close</button>
+  <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px" (click)="Marketingindicator_Update(marketingID.value,marketingindica.value)">Save / Update</button>
+  <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px">New</button>
+  <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px" (click)="Marketingind_delete(marketingindica.value)">Delete</button>
 </div>
