--- a/ClientApp/src/app/formula-lookup/formula-instruction/formula-instruction.component.html
+++ b/ClientApp/src/app/formula-lookup/formula-instruction/formula-instruction.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #f6f5f1">
+<div style="background-color: #f6f5f1" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
   <div style="overflow-y:auto;overflow-x:hidden; height:60vh;width:100%">
     <div class="col-sm-12">
       <div style="background-color: #f6f5f1">
@@ -13,7 +13,7 @@
       <p class="font-weight-bold">Double Click to Edit the Value</p>
     </div>
     <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;">
-      <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+      <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
 
         <thead>
           <tr>
