--- a/ClientApp/src/app/formula-lookup/inciname-select/inciname-select.component.html
+++ b/ClientApp/src/app/formula-lookup/inciname-select/inciname-select.component.html
@@ -11,7 +11,7 @@
 
             <div class="col-sm-12">
               <div class="form-inline">
-                <label class="label1" for="inputcust">{{getlabels}}</label>
+                <label class="label1" for="inputcust">Search Ingredient</label>
                 <input type="text" style="width:70%" class="form-control" id="inputformulacode" placeholder="" [(ngModel)]="getgriddata" #getgriddat name="getgrid" value="">
               </div>
             </div>
