--- a/ClientApp/src/app/formula-restriction/formula-restriction.component.html
+++ b/ClientApp/src/app/formula-restriction/formula-restriction.component.html
@@ -549,7 +549,7 @@
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
 
-    <button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:60px;margin-top:1%"(click)="deletetempprocess(); backtoformulation();"[routerLink]="'/Formulalookup'">Back to Formulation</button>
+    <button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:60px;margin-top:1%"(click)="deletetempprocess(); backtoformulation();"[routerLink]="'/Home/Formulalookup'">Back to Formulation</button>
     <button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:10px;margin-top:1%">Print Preview</button>
    
 
