--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -117,7 +117,7 @@
 
                 <a mat-list-item [routerLink]="'/PDRManagement'">General </a>
                 <a mat-list-item [routerLink]="'/PDRManagement'"> Requirements </a>
-                <a mat-list-item [routerLink]="'/fetch-data'"> Product Dev.Brief </a>
+                <a mat-list-item [routerLink]="'/formularestriction'"> Product Dev.Brief </a>
                 <a mat-list-item [routerLink]="'/fetch-data'">Assigning Users</a>
                 <a mat-list-item [routerLink]="'/fetch-data'"> 21 CFR Part 11 Approvers List </a>
                 <a mat-list-item [routerLink]="'/fetch-data'">Stage Gate Settings </a>
