--- a/ClientApp/src/app/raw-material/raw-material.component.css
+++ b/ClientApp/src/app/raw-material/raw-material.component.css
@@ -190,3 +190,20 @@ label2 {
   display: inline-block;
   min-width: 10px;
 }
+.alert {
+  position: fixed;
+  top: 5%;
+  right: 3rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  padding: 2rem;
+  background: #fff;
+  color: #49784d;
+  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease-in-out;
+  opacity: 0;
+}
+.visible {
+  opacity: 1;
+  transform: translateY(1.25rem);
+}
