--- a/ClientApp/src/app/formula-lookup/check-restriction/check-restriction.component.html
+++ b/ClientApp/src/app/formula-lookup/check-restriction/check-restriction.component.html
@@ -21,7 +21,7 @@
 
 
     <button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:60px;margin-top:1%"  matDialogClose>No</button>
-    <button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:10px;margin-top:1%"[routerLink]="'/formularestriction'"  matDialogClose>yes</button>
+    <button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:10px;margin-top:1%"[routerLink]="'/Home/formularestriction'" matDialogClose>yes</button>
     <label style="margin-top:1%;font:bolder;font-size:20px;float:right;margin-right:10px;">Do you want to view the details</label>
 
 
