--- a/ClientApp/src/app/formula-lookup/search-formula/search-formula.component.css
+++ b/ClientApp/src/app/formula-lookup/search-formula/search-formula.component.css
@@ -23,7 +23,11 @@ p.test {
   padding-top: 10px;
   margin: 20px;
 }
-
+.header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
 input {
   margin: 5px;
 }
