--- a/ClientApp/src/app/formula-lookup/search-pdr/search-pdr.component.html
+++ b/ClientApp/src/app/formula-lookup/search-pdr/search-pdr.component.html
@@ -32,12 +32,12 @@
       <p class="font-weight-bold">Make your selection by double clicking on your choice</p>
     </div>
     <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;">
-      <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+      <table class=" table table-hover table-bordered" style=" background-color: white" id="table" width="100%">
         <thead>
           <tr>
-            <th hidden scope="col">Formula Code</th>
-            <th scope="col">PDR#</th>
-            <th scope="col">Formula Name</th>
+            <th class="header" hidden scope="col">Formula Code</th>
+            <th class="header" scope="col">PDR#</th>
+            <th class="header" scope="col">Formula Name</th>
           </tr>
         </thead>
         <tbody>
@@ -48,7 +48,7 @@
           <tr *ngFor="let pdr_search of dataresultsearchpdr | filter:Formulaname|filter:Pdrdata; let i=index;" (click)="setvalues( pdr_search);close();"#conten>
             <td hidden>{{ pdr_search.FormulaCode }}</td>
             <td>{{ pdr_search.PDRNo}}</td>
-            <td>{{ pdr_search.FormulaName }}</td>
+            <td>{{ pdr_search.ProjectName }}</td>
           </tr>
         </tbody>
       </table>
