--- a/ClientApp/src/app/pdr-management/search-customer-pdr/search-customer-pdr.component.html
+++ b/ClientApp/src/app/pdr-management/search-customer-pdr/search-customer-pdr.component.html
@@ -19,7 +19,7 @@
     </fieldset>
     <p style="color:maroon">Make your selection by double clicking on your choice</p>
     <div style="margin-left:1%;margin-top:1%; height:350px; overflow-y: auto;">
-      <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+      <table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
         <thead>
           <tr>
             <th scope="col">Customer Key</th>
