--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
@@ -162,11 +162,27 @@
                   <input type="text" style="width: 60%;" class="form-control" id="distributor" placeholder="" [(ngModel)]="Distributor" #dstrbtr name="Distributors" value="">
                 </div>
 
-                <div class=" form-inline" style="padding-top:1%;">
+                <!--<div class=" form-inline" style="padding-top:1%;">
                   <label for="inputPassword4" style="margin-top: 10px;">Email</label>
                   <textarea type="text" style="width: 60%; height: 15%" class="form-control" id="emails" placeholder="" [(ngModel)]="email" #mail name="eml" value=""></textarea>
-                </div>
+                </div>-->
+                <div class="form-inline">
+                  <label>Email</label>
+                  <input class="form-control" id="contactemail2"
+                         style="width: 50%;"
+                         type="text"
+                         #contactemail2="ngModel"
+                         [(ngModel)]="email"
+                         required
+                         pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
 
+
+
+               
+
+
+
+                </div>
                 <div class=" form-inline" style="padding-top:1%;">
                   <label for="inputPassword4" style="margin-top: 10px;">Contact #</label>
                   <input type="text" style="width: 60%;" class="form-control" id="ContactNumber" placeholder="" [(ngModel)]="ContactNo" #cno name="cnu" value="">
@@ -178,7 +194,7 @@
                     <option selected>No Terms</option>
                     <option *ngFor="let itemunit of termsdatalo_data">{{itemunit.Terms}}</option>
                     <!--<option>DHL</option>
-                  <option>Federal Express</option>-->
+      <option>Federal Express</option>-->
                   </select>
                   <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 40px;margin-top:10px;" (click)="OpenTermsMaster()">...</button>
                 </div>
@@ -489,7 +505,7 @@
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"  [routerLink]="'/RawMaterial'">Back</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"  (click)="Suppliersaveupdate(supplierkey.value,suppliername.value,suppliercod.value);">Save</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"(click)="Suppliersupdate(supplierkey.value,suppliername.value);">Update</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%">New</button>
+  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%" (click)="ClearData();">New</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5% " (click)="deletesupplier(suppliername.value)">Delete Supplier</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%">Print Preview</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%">Export to Excel</button>
