--- a/ClientApp/src/app/raw-material/add-cas-details/search-cas/search-cas.component.html
+++ b/ClientApp/src/app/raw-material/add-cas-details/search-cas/search-cas.component.html
@@ -2,7 +2,7 @@
   <div style="overflow-y:auto;overflow-x:hidden; height:60vh;width:100%">
     <div class="row">
       <div class="col-md-6 offset-md-3">
-        <h2 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black;text-align:center">Search Function</h2>
+        <h2 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black;text-align:center">Search CAS</h2>
       </div>
     </div>
     <fieldset class="border p-2">
