--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
@@ -200,7 +200,7 @@
                 </div>
 
                 <div class=" form-inline" style="padding-top:2%;">
-                  <label for="inputPassword4" style="margin-top: 10px;">Expanse Account</label>
+                  <label for="inputPassword4" style="margin-top: 10px;">Expense Account</label>
                   <input type="text" style="width: 60%;" class="form-control" id="Expenseaccount" placeholder="" [(ngModel)]="ExpenseAccount" #ExpAcc name="Expense" value="">
                 </div>
 
