--- a/ClientApp/src/app/raw-material/raw-material.component.html
+++ b/ClientApp/src/app/raw-material/raw-material.component.html
@@ -41,7 +41,7 @@
           <div class="form-inline">
 
 
-            <input hidden type="text" class="form-control" placeholder="" id="" [(ngModel)]="supp_code" #suppliercode name="supcode" value="">
+            <input hidden  type="text" class="form-control" placeholder="" id="" [(ngModel)]="supp_code" #suppliercode name="supcode" value="">
 
             <input hidden type="text" class="form-control" placeholder="" id="itemcodehid" [(ngModel)]="itemcodehidd" name="itemcodh" value="" />
           </div>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="form-inline">
                   <label for="inputcust">Re Order Qty</label>
-                  <input style="width: 13%;" type="text" class="form-control" :placeholder="0.00" [(ngModel)]="reorderQty" #orderqty name="reorderqtyval" value="">
+                  <input style="width: 13%;text-align:right" type="text" class="form-control" :placeholder="0.00" [(ngModel)]="reorderQty" #orderqty name="reorderqtyval" value="">
                   <select id="PRD" class="form-control" style="width:11.5%;">
                     <option selected>Kg</option>
                     <option>Lb</option>
@@ -138,7 +138,7 @@
                     <option>g</option>
                   </select>
                   <label for="inputcust">Min Order Qty</label>
-                  <input style="width: 14%;" type="text" class="form-control" placeholder="0.00" [(ngModel)]="MOQ" #Minorder name="minodrq" value="">
+                  <input style="width: 14%;text-align:right" type="text" class="form-control" placeholder="0.00" [(ngModel)]="MOQ" #Minorder name="minodrq" value="">
                   <select id="PRD" class="form-control" style="width:6%;">
                     <option selected>Kg</option>
                     <option>Lb</option>
@@ -201,8 +201,8 @@
 
                 </div>
                 <div class="form-inline">
-                  <label for="inputcust" style="color:darkblue;font-weight:700">Last PO Price$</label>
-                  <input style="width: 15%;margin-left:1.2%" type="text" class="form-control" [(ngModel)]="lastPOCost" #POvalue name="LastPOval" placeholder="0.000" value="">
+                  <label for="inputcust" style="color:darkblue;font-weight:700;text-align:right">Last PO Price$</label>
+                  <input style="width: 15%;margin-left:1.2%;text-align:right" type="text" class="form-control" [(ngModel)]="lastPOCost" #POvalue name="LastPOval" placeholder="0.000" value=""  (change)="blurlastpo($event)" >
                   <h5 for="inputcust" style="color:red">*</h5>
                   <label for="inputcust" style="margin-left:-5%">Per</label>
                   <select disabled id="PRD" class="form-control" style="width:7%;" name="uomnamevallastpo" [(ngModel)]="LastPOUnit" value="">
@@ -221,16 +221,16 @@
 
                 </div>
                 <div class="form-inline">
-                  <label for="inputcust" style="color:forestgreen;font-weight:700">Standard Price$</label>
-                  <input style="width: 15%;margin-left:0.8%" type="text" class="form-control" [(ngModel)]="unitCost" placeholder="0.000" #stdprize name="stdprizval" value="">
+                  <label for="inputcust" style="color:forestgreen;font-weight:700;text-align:right">Standard Price$</label>
+                  <input style="width: 15%;margin-left:0.8%;text-align:right" type="text" class="form-control" [(ngModel)]="standardprice" placeholder="0.000" name="stdprizval" value="" (blur)="blurdelstdcost($event)">
                   <h5 for="inputcust" style="color:red">*</h5>
                   <label style="margin-left:-5%">Per</label>
-                  <select  id="PRD" class="form-control" style="width:7%;" [(ngModel)]="defaultUnit" (change)="uomChange($event)" name="uomnameval" value="">
+                  <select  id="PRD" class="form-control" style="width:7%;" [(ngModel)]="standardpriceunit" (change)="stdpriceChange($event)" name="uomnameval" value="">
                     <option selected>{{changeunit}}</option>
                     <option *ngFor="let defaultUOM of defaultUOMload_data" value={{defaultUOM.Unitid}}>{{defaultUOM.Unitname}}</option>
                   </select>
                   <label for="inputcust" style="margin-left:-5%">as of</label>
-                  <input style="width: 15%;" type="date" id="costdate" class="form-control" [(ngModel)]="costDt" (change)="dateChange($event)" name="costdate" value="">
+                  <input style="width: 15%;" type="date"  id="stdpricedate" class="form-control" [(ngModel)]="standardpricedate" (change)="dateChange($event)" name="stddate" value="">
                   <Label style="margin-left:5.8%">Kosher</Label>
                   <mat-radio-group aria-label="Select an option" style="margin-left:2%">
 
@@ -240,19 +240,19 @@
                 </div>
                 <div class="form-inline">
                   <label for="inputcust" style="color:forestgreen;font-weight:700">Shipping Cost$</label>
-                  <input style="width: 15%;margin-left:1.2%" type="text" class="form-control" [(ngModel)]="lastPOCost" #POvalue name="LastPOval" placeholder="0.000" value="">
+                  <input style="width: 15%;margin-left:1.2%;text-align:right" type="text" class="form-control" [(ngModel)]="shippingprize"  #POvalue name="shipval" placeholder="0.000" value="" (blur)="blurdeliveredcost($event)">
                   <h5 for="inputcust" style="color:red">*</h5>
                   <label for="inputcust" style="margin-left:-5%">Per</label>
-                  <select id="PRD" class="form-control" style="width:7%;" name="shipco" value="" [(ngModel)]="costUnit">
+                  <select disabled id="PRD" class="form-control" style="width:7%;" name="shipco" value="" [(ngModel)]="shippingpriceunit">
                     <option selected>{{changeunit}}</option>
                     <option *ngFor="let defaultUOM of defaultUOMload_data" value={{defaultUOM.Unitid}}>{{defaultUOM.Unitname}}</option>
                   </select>
                   <label for="inputcust" style="margin-left:-5%">as of</label>
-                  <input style="width: 15%;" type="date" id="shipdate" class="form-control" (change)="dateChange($event)" name="shippdate" value="">
+                  <input disabled style="width: 15%;" type="date" id="shipdate" class="form-control" (change)="dateChangeship($event)" [(ngModel)]="shippingpricedate" name="shippdate" value="">
 
 
                   <label for="inputcust">Default UOM</label>
-                  <select id="PRD" class="form-control" style="width:7%;" [(ngModel)]="defaultUnit" (change)="uomChange($event)" name="uomnameval" value="">
+                  <select disabled id="PRD" class="form-control" style="width:7%;" [(ngModel)]="defaultUnit" (change)="uomChange($event)" name="uomnameval1" value="">
                     <option selected>{{changeunit}}</option>
                     <option *ngFor="let defaultUOM of defaultUOMload_data" value={{defaultUOM.Unitid}}>{{defaultUOM.Unitname}}</option>
                   </select>
@@ -280,19 +280,19 @@
                   <legend class="w-auto" style="font-size:15px;color:maroon">RM Lead Time(Week(s))</legend>
                   <div class="form-inline">
                     <label placeholder="0">Pre Processing</label>
-                    <input style="width: 50%;" type="text" class="form-control" [(ngModel)]="preloadtime" name="prepro" value="" (blur)=" blurEventpreload($event);">
+                    <input style="width: 50%;text-align:right" type="text" class="form-control" [(ngModel)]="preloadtime" name="prepro" value="" (blur)=" blurEventpreload($event);">
                   </div>
                   <div class="form-inline">
                     <label placeholder="0">Processing</label>
-                    <input style="width: 50%;" type="text" class="form-control" [(ngModel)]="proleadtime" name="propro" value="" (blur)=" blurEventprolead($event);">
+                    <input style="width: 50%;text-align:right" type="text" class="form-control" [(ngModel)]="proleadtime" name="propro" value="" (blur)=" blurEventprolead($event);">
                   </div>
                   <div class="form-inline">
                     <label placeholder="0">Post Processing</label>
-                    <input style="width: 50%;" type="text" class="form-control" [(ngModel)]="postleadtime" name="postlead" value="" (blur)=" blurEventpostlead($event);">
+                    <input style="width: 50%;text-align:right" type="text" class="form-control" [(ngModel)]="postleadtime" name="postlead" value="" (blur)=" blurEventpostlead($event);">
                   </div>
                   <div class="form-inline">
                     <label style="color:maroon" placeholder="0">CUM Lead Time</label>
-                    <input style="width: 50%;" type="text" class="form-control" [(ngModel)]="rmleadtime" #Rawmatsource name="rmlead" value="">
+                    <input style="width: 50%;text-align:right" type="text" class="form-control" [(ngModel)]="rmleadtime" #Rawmatsource name="rmlead" value="">
                   </div>
                 </fieldset>
                 <div class="form-inline" style="margin-top:4%">
@@ -315,20 +315,20 @@
             <div class="form-inline" style="margin-top:-1%">
 
               <label for="inputcust" style="color:maroon;font-weight:700">Delivered Price$</label>
-              <input style="width: 10%;" type="text" class="form-control" [(ngModel)]="deliveredprice" name="delprice" placeholder="0.000" value="">
+              <input style="width: 10%;text-align:right" type="text" class="form-control" [(ngModel)]="unitCost" name="delprice" placeholder="0.000" value="">
               <h5 for="inputcust" style="color:red">*</h5>
               <label for="inputcust" style="margin-left:-3.2%">Per</label>
-              <select id="PRD" class="form-control" style="width:4.5%;" name="deliverval" value="" [(ngModel)]="costUnit">
+              <select disabled  id="PRD" class="form-control" style="width:4.5%;" name="deliverval" value="" [(ngModel)]="costUnit">
                 <option selected>{{changeunit}}</option>
                 <option *ngFor="let defaultUOM of defaultUOMload_data" value={{defaultUOM.Unitid}}>{{defaultUOM.Unitname}}</option>
               </select>
               <label for="inputcust" style="margin-left:-3.2%">as of</label>
-              <input style="width: 10%;" type="date" id="deliverdate" class="form-control" (change)="dateChange($event)" name="deliverc" value="">
+              <input style="width: 10%;" type="date" id="deliverdate" class="form-control" (change)="dateChange($event)"  [(ngModel)]="standardpricedate" name="deliverdate" value="">
               <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 20px; " (click)="OpenRMVP()">Volume Pricing</button>
-              <label for="inputcust" placeholder="0.00" style="margin-left:1%">Concentration %</label>
-              <input style="width: 10%" type="text" class="form-control" [(ngModel)]="concentration" name="Concvalue" value="">
+              <label for="inputcust" placeholder="0.00" style="margin-left:1%;text-align:right">Concentration %</label>
+              <input style="width: 10%;text-align:right" type="text" class="form-control" [(ngModel)]="concentration" name="Concvalue" value="">
               <label for="inputcust" style="color:forestgreen;margin-left:1.6%;">Previous Price $</label>
-              <input style="width: 10%;" type="text" class="form-control" [(ngModel)]="PreviousCost" name="PreviousCos" value="">
+              <input style="width: 10%;text-align:right" type="text" class="form-control" [(ngModel)]="PreviousCost" name="PreviousCos" value="">
             </div>
 
             <div class="form-inline " style="margin-top:1%">
@@ -337,7 +337,7 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" style="width:60%;" [(ngModel)]="notes" #not name="notesnam" value=""></textarea>
               <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 20px; ">...</button>
               <label for="inputcust" style="margin-left:2.2%" placeholder="0.00">RM Assay Value</label>
-              <input style="width: 10%" type="text" class="form-control" [(ngModel)]="rmAssayValue" #rmvalue name="rmname" value="">
+              <input style="width: 10%;text-align:right" type="text" class="form-control" [(ngModel)]="rmAssayValue" #rmvalue name="rmname" value="">
             </div>
           </form>
         </ng-template>
